<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- SEVER CONFIGURATION VALUES -->
    <string name="SERVER_ADRESS">http://www.saienterprisesdwd.com/bank</string>

    <!-- GENERAL VALUES -->
    <string name="app_name">GPIGMI SOLUTION</string>
    <string name="action_settings">Settings</string>
    <string name="uname">USER NAME:</string>
    <string name="title">SAI PIGMI SOLUTION</string>
    <string name="mimgDesc">MainImage</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_home">HOME</string>
    <string name="collections">COLLECTION</string>
    <string name="reports">REPORTS</string>
    <string name="upload">UP LOAD/DOWNLOAD</string>
    <string name="password">PASS  WORD:</string>
    <string name="logout">LOGOUT</string>
    <string name="title_activity_collection">Collections</string>
    <string name="hello_world">Hello world!</string>
    <string name="acctId">ACCT NO :</string>
    <string name="tname">C. NAME :</string>
    <string name="tobal">OP. BAL :</string>
    <string name="amt">AMT Rs :</string>
    <string name="cbal">CL. BAL :</string>
    <string name="mobile">MOB.No:</string>
    <string name="save">SAVE</string>
    <string name="reset">RESET</string>
    <string name="title_activity_reports">REPORTS</string>
    <string name="viewreports">VIEW REPORT</string>
    <string name="creports">CUSTOMERWISE REPORTS</string>
    <string name="dreports">DATEWISE REPORTS</string>
    <string name="cdreports">CUSTOMER/DATEWISE REPORTS</string>
    <string name="ddreports">DATE/DATEWISE REPORTS</string>
    <string name="reportsTitle">VIEW REPORTS</string>
    <string name="collectionsTitle">COLLECTION DETAILS</string>
    <string name="title_activity_view_customer">CUSTOMER DETAILS</string>
    <string name="label_date">DATE:</string>
    <string name="reportTitle">VIEW REPORT</string>
    <string name="config">CONFIGURE</string>
    <string name="title_activity_blue_tooth_printer_app">BlueToothPrinterApp</string>
    <string name="title_activity_btdevice_list">BTDeviceList</string>
    <string name="print">PRINT</string>
    <string name="start_label_date">BEG DATE:</string>
    <string name="end_label_date">END DATE:</string>
    <string name="title_activity_view_date_wise_report">VIEW DATE WISE REPORT</string>
    <string name="dateview">ENTER DATES</string>
    <string name="other_report">OTHER REPORTS</string>
    <string name="commission_calc">COMMISSION CALCULATOR</string>
    <string name="homeTitle">HOME</string>
    <string name="socid">SOCEITY ID:</string>
    <string name="title_activity_other_report">OTHER REPORTS</string>
    <string name="action">ACTION</string>
    <string name="reportfor">REPORT OF:</string>
    <string name="otherreports">OTHER REPORT</string>
    <string name="select">SELECT</string>
    <string name="monthyear">MONTH/YEAR:</string>
    <string name="todaycoll">TO DAY COLLECTION</string>
    <string name="title_activity_bt__print">BT_PrintActivity</string>
    <string name="seldevice">SELECT PRINTING DEVICE:</string>
    <string name="custReport">ENTER CUSTOMER DETAILS</string>
    <string name="title_activity_com_calculation">Commissiom</string>
    <string name="yes">YES</string>
    <string name="commission">COMMISSION</string>
    <string name="months">MONTH:</string>
    <string name="year">YEAR:</string>
    

</resources>
