<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
	android:gravity="center"
	android:background="#B0E0E6"
    tools:context="com.society.gsaienter.HomeActivity" >
	
    <TextView 
        android:id="@+id/reportTitle"
		android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/homeTitle"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold" 
        android:paddingBottom="20dp"/>
    
    <Button 
        android:id="@+id/bcollections"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/collections"
        android:textColor="#FFFFFF"
        android:background="@drawable/custom_button"/>

    <Button 
        android:id="@+id/breport"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/reports"
        android:textColor="#FFFFFF" 
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"/>
    
    <Button 
        android:id="@+id/bupload"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:textColor="#FFFFFF" 
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"/>
    
    <Button 
        android:id="@+id/blogout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="#FFFFFF" 
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"/>
    

</LinearLayout>
