<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#B0E0E6"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.society.gsaienter.ComCalculationActivity" >

    <TextView
        android:id="@+id/commission"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/commission"
        android:textSize="30sp"
        android:textStyle="bold" />
    
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" 
         android:layout_height="wrap_content"  android:background="#00000000">

     <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" 
         android:layout_height="wrap_content"  android:background="#00000000" android:gravity="center">
         
        <TextView android:text="@string/months" 
            android:layout_width="0dp" 
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textStyle="bold" 
            android:ems="10"
            />
        
        <Spinner 
        	android:id="@+id/month"
        	android:layout_width="0dp" 
            android:layout_weight="1"
         	android:layout_height="wrap_content"
         	android:textSize="15sp"
         	android:ems="10"/>
        </LinearLayout>
        
     <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" 
         android:layout_height="wrap_content"  android:background="#00000000" android:gravity="center">
        
        <TextView android:text="@string/year" 
            android:layout_width="0dp" 
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textStyle="bold" 
            android:ems="10"/>
        
        <Spinner 
        	android:id="@+id/year"
        	android:layout_width="0dp" 
            android:layout_weight="1"
         	android:layout_height="wrap_content"
         	android:textSize="15sp"
         	android:ems="10"/>	
        </LinearLayout>
        
     <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" 
         android:layout_height="wrap_content"  android:background="#00000000" android:layout_gravity="center">
        <Button
            android:id="@+id/submit"
            android:layout_width="0dp" 
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/yes" 
            android:gravity="center"/>
       		</LinearLayout>
       </LinearLayout>
</LinearLayout>
