<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#B0E0E6"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.society.gsaienter.ViewCustomerActivity" >
    
    <TextView 
        android:id="@+id/custReport"
		android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/custReport"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold" 
        android:paddingBottom="20dp"/>
    
        
    <LinearLayout android:orientation="horizontal" android:layout_margin="12dip" 
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:background="#00000000">

        <TextView android:text="@string/acctId" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:textStyle="bold" />
        
        <EditText 
        	android:id="@+id/vacctId"
        	android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
         	android:ems="10"
         	android:inputType="number"
         	android:background="@drawable/rounded_edit_text" 
         	android:textSize="15sp"/>
       </LinearLayout>
       
     <LinearLayout android:orientation="horizontal" android:layout_margin="12dip" 
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:background="#00000000">

        <TextView android:text="@string/start_label_date" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:textStyle="bold" />

        <EditText
        	android:id="@+id/vdate"
        	android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
         	android:ems="10"
         	android:inputType="text"
         	android:focusable="false"
         	android:background="@drawable/rounded_edit_text" 
         	android:textSize="15sp"/>
                      
       </LinearLayout>
       
     <LinearLayout android:orientation="horizontal" android:layout_margin="12dip" 
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:background="#00000000">

        <TextView android:text="@string/end_label_date" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:textStyle="bold" />

        <EditText 
        	android:id="@+id/vEnddate"
        	android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
         	android:ems="10"
         	android:inputType="text"
         	android:focusable="false"
         	android:background="@drawable/rounded_edit_text"
         	android:textSize="15sp" />
                      
       </LinearLayout>
       
    <LinearLayout android:orientation="horizontal" android:layout_margin="10dp" 
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:background="#00000000" android:layout_gravity="center">
    
    
    <LinearLayout android:orientation="horizontal" android:layout_margin="5dp" 
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:background="#00000000" android:layout_gravity="center">

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/reports"
            android:textColor="#FFFFFF" />
       </LinearLayout>
      
    	<LinearLayout android:orientation="horizontal" android:layout_margin="5dp"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:background="#00000000" android:layout_gravity="center">
    
   		 <Button 
       		android:id="@+id/reset"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/reset"
        	android:textColor="#FFFFFF" 
        	android:background="@drawable/custom_button"/>
    
       </LinearLayout>
    
	</LinearLayout>
     
    <LinearLayout android:id="@+id/detailsLayout"  android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_gravity="start"
        android:layout_margin="10dp" android:background="#00000000"
        android:orientation="vertical" android:visibility="invisible" >
   
        <TextView
            android:id="@+id/cdetails"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:textStyle="bold" />
        
     	<HorizontalScrollView 
     	    android:layout_width="match_parent"
     	    android:layout_height="match_parent">
   	
   		<LinearLayout android:id="@+id/labels" 
   		    android:orientation="vertical"
   		    android:layout_width="wrap_content"
        	android:layout_height="wrap_content">
   		
   		    <LinearLayout android:orientation="horizontal"
   		        android:layout_width="match_parent"
        		android:layout_height="wrap_content">
    		
    		<TextView
                android:text="AMOUNT"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:ems="6" 
        		android:textStyle="bold"
        	/>

    		<TextView
        		android:text="OPEN_BAL"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:ems="6"
        		android:textStyle="bold"  
        	/>
    		
    		<TextView
                android:text="CLOSE_BAL"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:ems="6" 
        		android:textStyle="bold"
        	/>

    		<TextView
        		android:text="DATE"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:ems="10"
        		android:textStyle="bold"
        		android:layout_marginStart="20dp"  
        	/>
    		
    		<TextView
        		android:text="TIME"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:textStyle="bold"
        	/>
   		        
   		        
   		    </LinearLayout>
   		    
     		<ListView
     	    	android:id="@+id/listview"
     	    	android:layout_width="wrap_content"
     	   	 	android:layout_height="match_parent"
     	    	/>
		</LinearLayout>
		
		</HorizontalScrollView>
     	
     	<Button 
     	    android:id="@+id/print"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/print"
            android:textColor="#FFFFFF" 
            android:visibility="invisible"/>
     	
    </LinearLayout>
    
  </LinearLayout>
  
